--- a/lib/x86_64-win64/mainunit.lfm
+++ b/lib/x86_64-win64/mainunit.lfm
@@ -1,15 +1,16 @@
 object MainForm: TMainForm
   Left = 548
-  Height = 600
+  Height = 750
   Top = 225
-  Width = 800
+  Width = 1000
   Caption = 'HolyLand'
+  DesignTimePPI = 120
   Menu = MainMenu
   OnCreate = FormCreate
   LCLVersion = '2.0.2.0'
   object MainMenu: TMainMenu
-    left = 19
-    top = 13
+    left = 24
+    top = 16
     object MenuItemFile: TMenuItem
       Caption = 'File'
       object MenuItemExit: TMenuItem
